# tus-card-reader

./: .flake8  README.md  pyproject.toml
src/: __init__.py  main.py
