[project]
name = "tus-card-reader"
version = "0.1.0"
dependencies = []
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "isort~=5.12.0",
    "flake8~=5.0.4",
    "flake8-annotations~=2.9.1",
    "pep8-naming~=0.13.3",
    "mypy~=1.3.0",
    "pytest~=7.3.2",
]

[tool.rye.scripts]
format = { chain = ["black src", "isort src"] }
lint = { chain = ["black --check src", "flake8 src", "mypy src"] }
test = { chain = ["python -m pytest tests"] }

[tool.hatch.metadata]
allow-direct-references = true
